v1.1.1
+ Generally improve pykarbon.can.format_message to have a more robust input acceptance, and to
  actually allow for sending custom formatted messages. 

v1.1.0
+ Add pykarbon.core module
+ Add support for reading input voltage
+ Fix bug in pykarbon.terminal reactions not triggering
+ Improve and add documentation on rtd.

v1.0.5
+ Fix bug where parameters would not be saved on system hard-reboot

v1.0.4
+ Add delay before updating info when terminal writes parameters
+ Fix erroneous test failures
+ Improve test coverage

v1.0.0
+ Small bug-fixes
+ Prepare package for launch
+ Add tests and improve test coverage

v0.2.6
+ Catch attribute error in Interface.release()
+ Override can.autobaud when using pykarbon.Karbon

v0.2.5
+ Separate main hardware tools and Karbon class.

v0.2
+ Add actual base tool tests
+ Add canbus tests
+ Have baudrate set to None on failure to detect

v0.1.5
+ Add change log
+ Update __all__ to include terminal.py
+ Turn base Karbon read/write into context managers.
+ Better formatting of terminal configuration lines.
+ Print error messages when terminal command fails.
+ Fix update_firmware.py.