@@ -1,6 +1,7 @@
 v1.1.1
 + Generally improve pykarbon.can.format_message to have a more robust input acceptance, and to
-  actually allow for sending custom formatted messages. 
+  actually allow for sending custom formatted messages.
++ Return None to callback action when hex_data is ''
 
 v1.1.0
 + Add pykarbon.core module
